# sysrq-firefox

./: Makefile.am  README.md  Vagrantfile  autogen.sh  configure.ac
m4/: acinclude.m4  args.m4
src/: Makefile.am  Makefile.common  Makefile.kernel  sysrq-firefox.4  sysrq-firefox.c
